--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
 <body leftmargin="40" bgcolor="#FFFFFF" link="#444444" text="#444444">
 	<a href="opencl.pdf">opencl note</a>
+	
+<body leftmargin="40" bgcolor="#FFFFFF" link="#444444" text="#444444">
+	<a href="https://github.com/pangdou/notebook/blob/master/tool/git.md">opencl note</a>
+	
+
 </body>
 </html>
